--- a/adasd.html
+++ b/adasd.html
@@ -22,6 +22,10 @@
         h1, h2, h3 {
             color: #333;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -29,21 +33,45 @@
         <h1>Trang Tin Tức</h1>
 
         <article>
-            <h2>Bài báo 1</h2>
+            <h2>Bài báo 1: Sự kiện thể thao lớn nhất trong năm</h2>
             <small>Ngày xuất bản: 23/09/2024</small>
-            <p>Nội dung bài báo 1. Đây là thông tin về các sự kiện đáng chú ý diễn ra trong tuần qua.</p>
+            <img src="https://example.com/sport-event.jpg" alt="Sự kiện thể thao" />
+            <p>Nội dung bài báo 1: 
+            Năm nay, sự kiện thể thao lớn nhất diễn ra tại thành phố Hồ Chí Minh, thu hút hàng triệu người tham dự. 
+            Các vận động viên từ khắp nơi trên thế giới đã có mặt để tranh tài ở nhiều môn thể thao khác nhau, từ điền kinh đến bóng đá.
+            Chương trình được tổ chức với sự đầu tư lớn vào cơ sở hạ tầng và công nghệ để đảm bảo an toàn cho khán giả và vận động viên.
+            Ngoài ra, ban tổ chức cũng có những hoạt động văn hóa phong phú nhằm tăng cường tinh thần đoàn kết và giao lưu giữa các quốc gia.
+            Khán giả có cơ hội trải nghiệm nhiều hoạt động giải trí, thưởng thức ẩm thực đa dạng và tham gia vào các cuộc thi thể thao thú vị.</p>
+            <p>Bên cạnh đó, một số nhà vô địch thể thao nổi tiếng cũng có mặt để giao lưu với người hâm mộ, tạo nên không khí hào hứng và đầy phấn khởi. 
+            Sự kiện không chỉ mang lại niềm vui cho người dân địa phương mà còn góp phần quảng bá hình ảnh đất nước ra thế giới.</p>
         </article>
 
         <article>
-            <h2>Bài báo 2</h2>
+            <h2>Bài báo 2: Xu hướng công nghệ mới trong năm 2024</h2>
             <small>Ngày xuất bản: 22/09/2024</small>
-            <p>Nội dung bài báo 2. Bài viết này thảo luận về các xu hướng công nghệ mới nhất hiện nay.</p>
+            <img src="https://example.com/technology-trends.jpg" alt="Xu hướng công nghệ" />
+            <p>Nội dung bài báo 2: 
+            Trong năm 2024, công nghệ tiếp tục phát triển với tốc độ chóng mặt, đặc biệt là trong lĩnh vực trí tuệ nhân tạo (AI) và Internet of Things (IoT).
+            Nhiều công ty công nghệ hàng đầu đã giới thiệu sản phẩm mới, như các thiết bị thông minh có thể giao tiếp và tự học hỏi từ thói quen người dùng.
+            Bài viết này sẽ điểm qua những xu hướng công nghệ nổi bật nhất, như sự phát triển của 5G, ứng dụng AI trong các lĩnh vực y tế và giáo dục, và sự gia tăng sử dụng blockchain trong quản lý dữ liệu.</p>
+            <p>Các nghiên cứu chỉ ra rằng AI đang ngày càng trở nên thông minh hơn và có khả năng hỗ trợ con người trong nhiều công việc hàng ngày. 
+            Chúng ta cũng thấy sự gia tăng của các thiết bị IoT, cho phép người dùng điều khiển mọi thứ từ đèn, máy điều hòa không khí đến hệ thống an ninh từ xa. 
+            Với sự kết nối mạnh mẽ hơn, chúng ta có thể tận hưởng một cuộc sống thông minh và tiện lợi hơn bao giờ hết. 
+            Tuy nhiên, những công nghệ này cũng đặt ra những thách thức về bảo mật và quyền riêng tư mà chúng ta cần phải giải quyết.</p>
         </article>
 
         <article>
-            <h2>Bài báo 3</h2>
+            <h2>Bài báo 3: Những điều thú vị về du lịch mùa thu</h2>
             <small>Ngày xuất bản: 21/09/2024</small>
-            <p>Nội dung bài báo 3. Trong bài viết này, chúng ta sẽ khám phá những điều thú vị về du lịch.</p>
+            <img src="https://example.com/autumn-travel.jpg" alt="Du lịch mùa thu" />
+            <p>Nội dung bài báo 3: 
+            Mùa thu là thời điểm tuyệt vời để khám phá những địa điểm du lịch mới. 
+            Trong bài viết này, chúng tôi sẽ giới thiệu một số điểm đến hấp dẫn mà bạn không nên bỏ qua, từ các thành phố cổ kính ở Châu Âu đến những bãi biển tuyệt đẹp ở Đông Nam Á.
+            Những nơi như Paris, Rome và Barcelona nổi bật với vẻ đẹp của những tán cây vàng đỏ và không khí lãng mạn của mùa thu.
+            Bên cạnh đó, các địa điểm nghỉ dưỡng ở Đông Nam Á cũng là lựa chọn lý tưởng cho những ai muốn tránh xa cái lạnh của mùa đông.</p>
+            <p>Bên cạnh những điểm đến nổi bật, chúng tôi cũng sẽ chia sẻ những mẹo hữu ích cho chuyến đi của bạn, từ việc lựa chọn thời điểm thích hợp cho đến cách tiết kiệm chi phí du lịch mà vẫn có những trải nghiệm tuyệt vời. 
+            Đừng quên chuẩn bị cho mình một chiếc máy ảnh để ghi lại những khoảnh khắc tuyệt vời trong hành trình khám phá của mình. 
+            Hãy lên kế hoạch ngay hôm nay để tận hưởng mùa thu trọn vẹn!</p>
         </article>
     </div>
 
